--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@angular/compiler-cli": "^15.2.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.0.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-jest": "^29.1.0",
     "typescript": "~4.9.5"
   }
 }
