--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "~15.2.5",
     "@angular/compiler-cli": "^15.2.5",
     "@types/jasmine": "~4.0.0",
+    "@types/jest": "^29.5.0",
     "jasmine-core": "~4.2.0",
     "jest": "^29.5.0",
     "jest-preset-angular": "^13.0.1",
